# university-projects

./: README.md
Book Store/: settings.properties
Event Manager/: CMakeLists.txt  main.cpp
Event Manager/domain/: event.cpp  tests.h  validator.cpp  validator.h
Event Manager/file_manager/: file_manager.h
Event Manager/qt/: main_window.cpp
Event Manager/repository/: dynamic_vector.h  repository.cpp  repository.h  tests_repo.cpp  tests_repo.h
Event Manager/service/: tests_serv.cpp  tests_serv.h
Event Manager/ui/: database.txt  event_list.html  ui.cpp  ui.h
Graph Manager/: graph1.txt  graph3.txt  main.py  t.txt  test.txt
Graph Manager/domain/: graph.py
Issue Tracker/: main.cpp  user.h  users.txt  userwindow.cpp  userwindow.ui
Q&A site/: CMakeLists.txt  answers.txt  main.cpp  mainwindow.h  mainwindow.ui  observer.h  questions.txt  searchwindow.h  searchwindow.ui  user_window.cpp  user_window.h  user_window.ui  users.txt
Toy Language Interpretor/: log1.txt  log2.txt  log3.txt  pom.xml
asc/conv din 10 in 2/: conv din 10 in 2.asm  conv din 10 in 2.lst
asc/module/: main.asm  modul.asm  obj
asc/testing/: test2.asm  (+3 more)
ps/: test.m
sda/lab 2/fixed cap bimap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  FixedCapBiMap.cpp  FixedCapBiMap.h  ShortTest.cpp
sda/lab 3/sorted iterated list/: App.cpp  CMakeLists.txt  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIteratedList.cpp  SortedIteratedList.h
sda/lab 5/sorted multimap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
(+782 files in other folders)
